fixing z-index

--- a/app/assets/stylesheets/sharing-custom.scss
+++ b/app/assets/stylesheets/sharing-custom.scss
@@ -52,7 +52,7 @@ a:hover, a:visited, a:link, a:active{
 	position: fixed;
 	right: 0;
 	left: 0;
-	z-index: 1030;
+	z-index: 3000;
 	height: 120px;
 	background: asset-data-url("fresh_snow.png");
 }
